--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(inc${PROJECT_NAME} INTERFACE ${${PROJECT_NAME}-inc})
 add_library(lib${PROJECT_NAME} ${${PROJECT_NAME}-src})
 
 target_include_directories(inc${PROJECT_NAME} INTERFACE include)
-target_link_libraries(${PROJECT_NAME} PUBLIC inc${PROJECT_NAME})
+target_link_libraries(lib${PROJECT_NAME} PUBLIC inc${PROJECT_NAME})
